--- a/0 a 3.html
+++ b/0 a 3.html
@@ -23,7 +23,7 @@
 	  <ul><a href="alimentos.html"class="smooth">Alimentos a consumir por mes de nacido</a></ul>
 				 </ol>
 				 <img src="caritas.jpg" alt="caritas">
-				 <h3> Observa que puede hacer en esta etapa</h3>
+				 <h3> Observa que puede hacer en esta etapa</h3><hr>
 <uL>
 <li >Sonríe ante el rostro del adulto </li>
 <li >Emite sonidos y/o vocalizaciones como forma de comunicación </li>
@@ -39,7 +39,7 @@ que no ha logrado o que hace con inseguridad no te preocupes, continua realizand
  esta actividades diariamente con cariño y verás que pronto lo hará</p>
   </div>
 <div id="main">
-<h2>¿C&oacute;mo es tu beb&eacute; de cero a tres meses?</h2>
+<h2>¿C&oacute;mo es tu beb&eacute; de cero a tres meses?</h2><hr>
 <p><img src="dormido.jpg" alt="dormido" width="200" height="150">
 <img src="amamantando.jpg" alt="amamantandolo"width="200" height="150"></p>
 <p>	Tu bebeito acaba de nacer y es importante  que conozcas como va ser
@@ -54,14 +54,14 @@ tus brazos y de tu amor.</p>
  personas y en los objetos que estan cerca de el, tamb&iacute;en puede seguirlos
  con la vista cuando se mueven. Ya en el tercer mes sonrrie, mueve brazos y piernas,
   emite algunos sonidos y manifiesta alegr&iacuote;a ante algunas personas que lo atienden</p>
-	<h3>¿Qu&eacute; debes hacer para que tu ni&ntilde;o cresca sano y feliz ?</h3>
+	<h3>¿Qu&eacute; debes hacer para que tu ni&ntilde;o cresca sano y feliz ?</h3><hr>
 	<p >Brindale afecto. Todos los ni&ntilde;os necesitan sentirse queridos,
 	muestrale cari&ntilde;o a tu hijo, abrazalo, acaricialo, besalo. hablale y
 	sonriele cuando lo alimentes, limpies, ba&ntilde;es, cambies y en todas las
 	actividades que realices con el. Si el bebe llora es porque tiene hambre, frio,
 	sed, dolor, est&aacute; mojado, desea cambiar de posici&oacute;n; calmalo,
 	no lo dejes solo, trata siempre de que alguna persona este siempre cerca de el. </p>
-	<h3 >Realiza actividades para desarrollar su inteligencia y sus movimientos</h3>
+	<h3 >Realiza actividades para desarrollar su inteligencia y sus movimientos</h3><hr>
 	<p>Cargalo ponlo frente a ti y que te mire. Hablale suavemente para que se fije
 	en ti. Acerca su cara a  un juguete o alguna cosa llamativa por el color o el
 	sonido, cuando se fije en el mueve el objeto de un lado a otro, si lo sigue
@@ -88,7 +88,7 @@ tus brazos y de tu amor.</p>
 
 	</div>
 <div id="news">
-		<h3>Cuida su salud</h3>
+		<h3>Cuida su salud</h3><hr>
 	<p>El cuidado de la salud de tu niño comienza cuando est&aacute; en tu vientre.
 		 Durante el embarazo has ido al médico,te has atendido ahora te corresponde
 			cuidar la salud de tu bebe, orientada por el personal especializado para ello.
