--- a/3 a 6.html
+++ b/3 a 6.html
@@ -23,7 +23,7 @@ initial-scale=1">
 	  <ul><a href="9 a 12.html" class="smooth">De nueve meses a doce meses</a></ul>
 	  <ul><a href="alimentos.html"class="smooth">Alimentos a consumir por mes de nacido</a></ul>
 	</ol>
-	<h2>Observa que puede hacer en esta etapa </h2>
+	<h2>Observa que puede hacer en esta etapa </h2><hr>
      <ul>
        <li>Reconoce a las personas que lo atienden y puede llorar ante la presencia de un extra&ntilde;o </li>
        <li>Balbucea y se rie cuando esta contento </li>
@@ -38,7 +38,7 @@ initial-scale=1">
      que pronto lo har&aacute;.</p>
 			  </div>
 <div id="main">
-<h1>¿C&oacute;mo es tu ni&ntilde;o?</h1>
+<h1>¿C&oacute;mo es tu ni&ntilde;o de 3 a 6 meses?</h1><hr>
 <p>En esta etapa son notables los cambios que podr&aacute;s observar en tu hijo,
  si lo estimulas y le das mucho cari&ntilde;o, el continuar&aacute; creciendo sano
 y feliz, lo ver&aacute;s reconocer a las personas que le rodean, a los m&aacute;s
@@ -47,7 +47,7 @@ ante una persona desconocida podr&aacute; extra&ntilde;ar y hasta echarse a llor
 Con sus manitas tratar&aacute; de alcanzar los objetos a su alcance y ayudado por ti,
  podr&aacute; virarse y mantenerse sentado unos instantes. Cuando est&aacute;
 contento se rie, valvusea y expresa entuasiasmo ante los juguetes y las cosas que le muestras </p>
-<h2>¿Qu&eacute; debes hacer para que tu ni&ntilde;o cresca sano y feliz ?</h2>
+<h2>¿Qu&eacute; debes hacer para que tu ni&ntilde;o cresca sano y feliz ?</h2><hr>
 <p>H&aacute;blale y sonr&iacute;ele cuando lo alimentes, lo limpies, lo ba&ntilde;es
 y siempre que hagas actividades con el .Si ves que sonrie has tu lo mismo y
 estim&uacute;lalo con un beso y una caricia , demuestrle que lo quieres. Tu beb&eacute;
@@ -60,7 +60,7 @@ necesita tamb&iacute;en relacionarce con otros miembros de la familia y personas
  se&ntilde;alale su imagen y dile su nombre, tambien m&uacute;estrale tu imagen
  y dile mam&aacute;, pap&aacute, abuelo, seg&uacute;n quien seas, ver&aacute;s lo contento que se pone.</p>
 </p>
-<h2>Realiza activ</span>idades para desarrollar su inteligencia y sus movimientos</h2>
+<h2>Realiza activ</span>idades para desarrollar su inteligencia y sus movimientos</h2><hr>
 <p>Es importante que estimules a tu beb&eacute; para que empiece a reconocer a
 las personas que m&aacute;s frecuentemente lo atiendan y a las cosas que le rodean .
  Acerca tu rostro a su cara y h&aacute;blale. Cuando te mire c&uacute;bretelo con
@@ -90,7 +90,7 @@ en esa posici&oacute;n, si todav&iacute;a no lo logra, puedes estimularlo con al
 </p>
 <img src="3meses.jpg" alt="3">
 <img src="4meses.jpg" alt="4">
-<h2> Cuida su salud</h2>
+<h2> Cuida su salud</h2><hr>
 <p>Es importante que conozcas que apartir de los cuatro meses comienza una nueva
 etapa en la alimentaci&oacute;n del ni&ntilde;o , y aunque <b>tu leche continua siendo
  lo fundamental</b> ya puedes comenzar a darle nuevos alimentos seg&uacute;n te oriente
