--- a/6 a 9.html
+++ b/6 a 9.html
@@ -23,7 +23,7 @@ initial-scale=1">
 	  <ul><a href="9 a 12.html" class="smooth">De nueve meses a doce meses</a></ul>
 	  <ul><a href="alimentos.html"class="smooth">Alimentos a consumir por mes de nacido</a></ul>
 	</ol>
-	<h2>Observa qu&eacute; puede hacer en esta etapa </h2>
+	<h2>Observa qu&eacute; puede hacer en esta etapa </h2><hr>
   <ol><li>   Se sienta por si mismo y conserva el equilibrio</li>
   <li>Puede agarrar objetos pequ&ntilde;os con dos dos</li>
   <li>Mete y saca objetos de diferentes tama&ntilde;os en una caja o dep&oacute;sito de boca ancha <li>
@@ -38,7 +38,7 @@ initial-scale=1">
 			  </div>
 <div id="main">
 
-<h1>¿C&oacute;mo es tu ni&ntilde;o?</h1>
+<h1>¿C&oacute;mo es tu ni&ntilde;o de 6 a 9 meses?</h1><hr>
 <p>Tu ni&ntilde;o va creciendo y seguramente has visto como puede hacer muchas cosas :
 en estos progresos tu desempe&ntilde;as un papel fundamental, pues su alegr&iacute;a ,
  felicidad y salud dependen en gran medida de ti, se traslada mediate el gateo,
@@ -50,7 +50,7 @@ en estos progresos tu desempe&ntilde;as un papel fundamental, pues su alegr&iacu
  las personas que est&aacute;n m&aacute;s en contacto con el y tamb&iacute;en algunos
  objetos,se alegra cuando tu repites los sonidos que el pronuncia y al escucharte,
   intenta imitarlos.</p>
- <h3>¿Qu&eacute; debes hacer para que tu ni&ntilde cresca y se desarrolle sano y feliz?</h3>
+ <h3>¿Qu&eacute; debes hacer para que tu ni&ntilde;o cresca y se desarrolle sano y feliz?</h3><hr>
 <p>  Br&iacute;ndale afecto: el ni&ntilde;o necesita conocer a otras personas, s&aacute;calo a pasear a la playa
 o a lugares cercanos en el barrio as&iacute; se acostumbra al trato con otras personas
  que no son de la familia. Nunca lo dejes solo en un lugar nuevo para el ,
@@ -62,7 +62,7 @@ imagen y le dices su nombre, as&iacute; como el nombre de las personas que est&a
 tratando de tocar su imagen ya sabes que tu ni&ntilde;o necesita sentir el cari&ntilde;o de
 los que le rodean. H&aacute;blale con dulsura, sonr&iacute;ele, b&eacute;salo. Es importante que todos
  los miembros de la familia jueguen con el y le demuestren su afecto</p>
-  <h2> Realiza actividades para desarrollar su inteligencia y sus movimientos </h2>
+  <h2> Realiza actividades para desarrollar su inteligencia y sus movimientos </h2><hr>
 <p>  Es importante que tu ni&ntilde;o aprenda a agarrar bien los objetos pra que pueda hacer
  cosas sencillas con ellos, para ello: ofr&eacute;cele juguetes peque&ntilde;os para que los meta
  y los saque de un recipiente(palangana, olla, cubo, caja),primero coloca uno tu
@@ -103,7 +103,7 @@ levanta el pa&ntilde;al para que lo coja. Pr&oacute;ximo a los nueve meses puede
 </div>
 <div id="news">
 </p>
-<h2> Cuida su salud</h2>
+<h2> Cuida su salud</h2><hr>
 <p>La leche materna sigue siendo el mejor alimento para tu beb&eacute;, para mantenerla
 dale de mamar tantas veces como el lo desee no le des otra leche ni otro alimento
 antes de consultar a su m&eacute;dico, el ni&ntilde;o no debe comer alimentos preparados fuera del hogar
