--- a/educa a tu hijo.html
+++ b/educa a tu hijo.html
@@ -26,7 +26,7 @@ initial-scale=1">
   </div>
 <div id="main">
 <img src= "educa.png" alt="educa">
-<h2>Estimados padres, madres y familias:</h2>
+<h2>Estimados padres, madres y familias:</h2><hr>
 <p>La infancia desde el nacimiento hasta los 6 años de vida , constituye dentro
 del desarrollo del ser humano la etapa más importante, pues en ella comienza a
 formarse la personalidad del niño y la niña de lo que se infiere el papel
