--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ vacunas necesarias por etapas,adem&aacute;s consultar el peso, crecimiento y des
 	<article>
 	<h1>¿C&oacute;mo debe ser <img src="mibebe.png" alt="mibebe"> seg&uacute;n su edad?</h1>
 		<section>
-	  <h2>Seguramente precioso porque lo amas!</h2><hr>
+	  <h2>Seguramente precioso porque lo amas!</h2>
 	  <p>Pero en este estudio les ofrecemos las habilidades que deben haber vencido
 	por cada etapa as&iacute; como orientaciones educativas que est&aacute;n
 			 organizadas deacuerdo con las diferentes edades y que conforman la etapa preescolar,
